--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-    <div id="logo-container"><a href=""><img src="../DANIELAG/media/logo.jpg" alt="foto del header"/></a></div>
+    <div id="logo-container"><a href=""><img src="../DANIELAG copy/media/logo.jpg" alt="foto del header"/></a></div>
 
     
 
@@ -49,7 +49,7 @@
                 <a href="https://www.youtube.com/channel/UCxy4Ijz2QKXXJaREs-isxwA"><i class="fa fa-youtube"></i></a>
                 <a href="https://instagram.com/floor_jansen_official"><i class="fa fa-instagram"></i></a>
                 <a href="https://open.spotify.com/artist/2ZNTJ9Bu9QMJwBboMSpQgJ"><i class="fa fa-spotify"></i></a>
-                
+
             </div>
          </nav>
         </nav>
