--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-    <div id="logo-container"><a href=""><img src="../DANIELAG copy/media/logo.jpg" alt="foto del header"/></a></div>
+    <div id="logo-container"><a href=""><img src="media/logo.jpg" alt="foto del header"/></a></div>
 
     
 
