title and meta added

--- a/pages/media.html
+++ b/pages/media.html
@@ -9,7 +9,7 @@
       <!--este ultimo hace que todas las paginas repitan el menu -->
 
 
-    <title>Media</title>
+    <title>Media| Floor Jansen</title>
 </head>
 <body>
 
