--- a/pages/news.html
+++ b/pages/news.html
@@ -12,7 +12,7 @@
     <!--este ultimo hace que todas las paginas repitan el menu -->
 
 
-    <title>News</title>
+    <title>News |Floor Jansen</title>
 </head>
 <body>
 
