--- a/pages/news.html
+++ b/pages/news.html
@@ -93,9 +93,11 @@
            <div class="card">
                <img src="../media/001.jpg" class="card-img-top" alt="A Street in Europe">
                <div class="card-body">
-                   <h5 class="card-title">3voor12 officially released a few songs </h5>
+                   <h5 class="card-title">3voor12 officially released </h5>
                    <p class="card-text">Watch Fire, Storm & The Phantom of the Opera at Pinkpop</p>
-               </div>
+                   <button type="button">More</button>
+
+                </div>
            </div>
        </div>
        <div class="col-12 col-md-6 col-lg-4">
@@ -105,7 +107,7 @@
                    <h5 class="card-title">Germany, Switzerland and Austria.</h5>
                    <p class="card-text">Floor Jansen announces 2023 tour in Germany, Switzerland & Austria!
                    </p>
-                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                   <button type="button">More</button>
                </div>
            </div>
        </div>
@@ -115,7 +117,7 @@
                <div class="card-body">
                    <h5 class="card-title">Single cover of "Storm" revealed!</h5>
                    <p class="card-text">Floor Jansen reveals the single cover of "Storm". Out May 27, 2022</p>
-                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                   <button type="button">More</button>
                </div>
            </div>
        </div>
@@ -131,7 +133,7 @@
                <div class="card-body">
                    <h5 class="card-title">Sing Meinen Song</h5>
                    <p class="card-text">Floor Jansen performs "FREUNDE" from ELIF. A German pop/rap song. Check it out!</p>
-                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                   <button type="button">More</button>
                </div>
            </div>
        </div>
@@ -139,9 +141,9 @@
            <div class="card">
                <img src="../media/005.jpg" class="card-img-top" alt="London">
                <div class="card-body">
-                   <h5 class="card-title">Floor appears on Efter Nio in Finland!</h5>
-                   <p class="card-text">Floor Jansen appeared as a guest on Efter Nio, the Finnish TV on YLE Areena & Teema.</p>
-                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                   <h5 class="card-title">Efter Nio in Finland!</h5>
+                   <p class="card-text">Floor appeared as a guest on Efter Nio, the Finnish TV on YLE Areena & Teema.</p>
+                   <button type="button">More</button>
                </div>
            </div>
        </div>
@@ -152,7 +154,7 @@
                    <h5 class="card-title">First solo show in The Netherlands </h5>
 
                    <p class="card-text">Floor Jansen announces solo show at Open Air Theater Hertme</p>
-                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                   <button type="button">More</button>
                </div>
            </div>
        </div>
