--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
         <a class="toggle-nav" href="#"></a>
         <ul>
             <li><a href="../pages/news.html">News</a></li>
-            <li><a href="../pages/biography.html">Biography</a></li>
+            <li><a href="../pages/pics.html">Pictures</a></li>
             <li><a href="../pages/about.html">About</a></li>
             <li><a href="../pages/media.html">Media</a></li>
             <li><a href="../pages/formulario.html">Formulario </a></li>
@@ -86,7 +86,7 @@
                 </div>
 
 
-                
+
                 <ul class="footer-menu-container">
                     <li class="menu-item">Contact</li>
                     <li class="menu-item">Cookies</li>
