--- a/pages/pics.html
+++ b/pages/pics.html
@@ -35,7 +35,7 @@
             <a class="toggle-nav" href="#">&#9776;</a>
             <ul>
                 <li><a href="../pages/news.html">News</a></li>
-                <li><a href="../pages/biography.html">Biography</a></li>
+                <li><a href="../pages/pics.html">Pictures</a></li>
                 <li><a href="../pages/about.html">About</a></li>
                 <li><a href="../pages/media.html">Media</a></li>
                 <li><a href="../pages/formulario.html">Formulario </a></li>
