--- a/pages/news.html
+++ b/pages/news.html
@@ -95,7 +95,7 @@
                <div class="card-body">
                    <h5 class="card-title">3voor12 officially released </h5>
                    <p class="card-text">Watch Fire, Storm & The Phantom of the Opera at Pinkpop</p>
-                   <button type="button">More</button>
+                   <button type="button" class="btn btn-primary btn-sm">Read More</button>
 
                 </div>
            </div>
@@ -107,7 +107,7 @@
                    <h5 class="card-title">Germany, Switzerland and Austria.</h5>
                    <p class="card-text">Floor Jansen announces 2023 tour in Germany, Switzerland & Austria!
                    </p>
-                   <button type="button">More</button>
+                   <button type="button" class="btn btn-primary btn-sm">Read More</button>
                </div>
            </div>
        </div>
@@ -117,7 +117,7 @@
                <div class="card-body">
                    <h5 class="card-title">Single cover of "Storm" revealed!</h5>
                    <p class="card-text">Floor Jansen reveals the single cover of "Storm". Out May 27, 2022</p>
-                   <button type="button">More</button>
+                   <button type="button" class="btn btn-primary btn-sm">Read More</button>
                </div>
            </div>
        </div>
@@ -133,7 +133,7 @@
                <div class="card-body">
                    <h5 class="card-title">Sing Meinen Song</h5>
                    <p class="card-text">Floor Jansen performs "FREUNDE" from ELIF. A German pop/rap song. Check it out!</p>
-                   <button type="button">More</button>
+                   <button type="button" class="btn btn-primary btn-sm">Read More</button>
                </div>
            </div>
        </div>
@@ -143,7 +143,7 @@
                <div class="card-body">
                    <h5 class="card-title">Efter Nio in Finland!</h5>
                    <p class="card-text">Floor appeared as a guest on Efter Nio, the Finnish TV on YLE Areena & Teema.</p>
-                   <button type="button">More</button>
+                   <button type="button" class="btn btn-primary btn-sm">Read More</button>
                </div>
            </div>
        </div>
@@ -154,7 +154,7 @@
                    <h5 class="card-title">First solo show in The Netherlands </h5>
 
                    <p class="card-text">Floor Jansen announces solo show at Open Air Theater Hertme</p>
-                   <button type="button">More</button>
+                   <button type="button" class="btn btn-primary btn-sm">Read More</button>
                </div>
            </div>
        </div>
