--- a/pages/about.html
+++ b/pages/about.html
@@ -70,7 +70,7 @@
 <section class="container-fluid">
     <div class="row">
         <div class="col-md-6">
-        <img class="image-fluid" src="../media/f.jpg">
+        <img class="" src="../media/f.jpg">
     </div>
         <div class="about-text col-md-6">
             <h2>About Her</h2>
