--- a/pages/discography.html
+++ b/pages/discography.html
@@ -10,7 +10,7 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
    
    
-     <title>Contact| Floor Jansen</title>
+     <title>Discography| Floor Jansen</title>
 </head>
 <body>
 
@@ -33,7 +33,7 @@
             <li><a href="../pages/pics.html">Pictures</a></li>
             <li><a href="../pages/about.html">About</a></li>
             <li><a href="../pages/media.html">Media</a></li>
-            <li><a href="../pages/formulario.html">Formulario </a></li>
+            <li><a href="../pages/discography.html">Discography </a></li>
          
             <!--redes sociales-->
         </ul>
