--- a/pages/pics.html
+++ b/pages/pics.html
@@ -38,7 +38,7 @@
                 <li><a href="../pages/pics.html">Pictures</a></li>
                 <li><a href="../pages/about.html">About</a></li>
                 <li><a href="../pages/media.html">Media</a></li>
-                <li><a href="../pages/formulario.html">Formulario </a></li>
+                <li><a href="../pages/discography.html">Discography</a></li>
              
                 <!--redes sociales-->
             </ul>
